tests/NormalTests/paczka1/small_fuzzy/67534159.err
Error in line 1: Gjl6o73 A936 84,3
Error in line 3: fdSVnWDfrq S955 51,9
